<resources>
    <string name="app_name">GoalTracker</string>
    <string name="title_activity_create_goal">New goal</string>
    <string name="cg_tw_name">Name</string>
    <string name="cg_tw_location">Location</string>
    <string name="cg_tw_category">Category</string>
    <string name="cg_tw_from">From</string>
    <string name="cg_tw_to">To</string>
    <string name="cg_tw_time">Time</string>
    <string name="cg_tw_repeat">Repeat</string>
    <string name="cg_tw_notification">Notification</string>
    <string name="cg_tw_duration">Duration</string>
    <string name="cg_tw_picture">Picture</string>
    <string name="cg_cd_timer">Timer</string>
    <string name="cg_cd_attachment">Attachment</string>
    <string name="cg_mi_save">Save</string>
    <string name="cg_mi_discard">Discard</string>
    <string-array name="cg_sp_category">
        <item>Hobby</item>
        <item>Sport</item>
        <item>School</item>
        <item>Work</item>
        <item>Entertainment</item>
    </string-array>
    <string-array name="cg_sp_repeat">
        <item>Every day</item>
        <item>Every week</item>
        <item>Every month</item>
    </string-array>
    <string-array name="cg_sp_notification">
        <item>10 minutes</item>
        <item>1 hour</item>
        <item>3 hour</item>
    </string-array>

    <string name="o_mi_all">All</string>
    <string name="o_mi_today">Today</string>
    <string name="o_mi_statistics">Statistics</string>
    <string name="o_mi_settings">Settings</string>
    <string name="o_mh_menu">Goal Tracker</string>
    <string name="o_mi_menu">Menu</string>
    <string name="o_mi_options">Options</string>
    <string name="o_mi_refresh">Refresh</string>
    <string name="o_iw_goal_image_desc">Goal picture</string>
    <string name="o_tw_goal_name">Learn programming</string>
    <string name="o_iw_refresh_desc">Refresh icon</string>
    <string name="o_tw_refresh">Every day</string>
    <string name="o_iw_duration_desc">Duration icon</string>
    <string name="o_tw_duration">30 minutes</string>
    <string name="o_iw_score_desc">Timeline icon</string>
    <string name="o_tw_score">120 / 240 minutes</string>
    <string name="o_bt_done">Done</string>
    <string name="channel_name">Goal tracker notification channel</string>
    <string name="channel_description">Goal tracker notification channel</string>
    <string name="gd_mi_delete">Delete</string>
    <string name="gd_mi_edit">Edit</string>

    <string name="sp_enable_notifications">enable_notifications</string>
</resources>
