<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="4dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/goalImage"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:src="@drawable/green_gradient"
                android:contentDescription="@string/o_iw_goal_image_desc"/>

            <TextView
                android:id="@+id/goalName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/o_tw_goal_name"
                android:layout_marginTop="12dp"
                android:layout_marginStart="12dp"
                android:textSize="24sp"
                android:textColor="@color/colorDarkGray"/>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="24dp">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_refresh_black_24px"
                    android:contentDescription="@string/o_iw_refresh_desc" />

                <TextView
                    android:id="@+id/goalRepeat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/o_tw_refresh"
                    android:layout_marginStart="34dp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="24dp">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_timer_24px"
                    android:contentDescription="@string/o_iw_duration_desc"/>

                <TextView
                    android:id="@+id/goalDuration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/o_tw_duration"
                    android:layout_marginStart="34dp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="24dp">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_timeline_24px"
                    android:contentDescription="@string/o_iw_score_desc"/>

                <TextView
                    android:id="@+id/goalScore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/o_tw_score"
                    android:layout_marginStart="34dp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:id="@+id/doneButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/o_bt_done"
                    android:textColor="@color/colorOrange"
                    android:layout_alignParentEnd="true"/>
            </RelativeLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>


</LinearLayout>