<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GoalDetailActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarGoalDetail"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:titleTextColor="@android:color/white"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view_detail"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        card_view:cardCornerRadius="4dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/goalDetailImage"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:src="@drawable/green_gradient"
                android:contentDescription="@string/o_iw_goal_image_desc"/>

            <TextView
                android:id="@+id/goalDetailName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/o_tw_goal_name"
                android:layout_marginTop="12dp"
                android:layout_marginStart="12dp"
                android:textSize="24sp"
                android:textColor="@color/colorDarkGray"/>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="24dp">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_category_24px"
                    android:contentDescription="@string/o_iw_score_desc"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Category:"
                    android:layout_marginStart="34dp"/>

                <TextView
                    android:id="@+id/goalDetailCategory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Hobby"
                    android:layout_marginStart="184dp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="24dp">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_location_on_24px"
                    android:contentDescription="@string/o_iw_score_desc"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Location:"
                    android:layout_marginStart="34dp"/>

                <TextView
                    android:id="@+id/goalDetailLocation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Home"
                    android:layout_marginStart="184dp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="24dp">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_refresh_black_24px"
                    android:contentDescription="@string/o_iw_refresh_desc" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Repeat:"
                    android:layout_marginStart="34dp"/>

                <TextView
                    android:id="@+id/goalDetailRepeat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/o_tw_refresh"
                    android:layout_marginStart="184dp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="24dp">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_timer_24px"
                    android:contentDescription="@string/o_iw_duration_desc"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Duration:"
                    android:layout_marginStart="34dp"/>

                <TextView
                    android:id="@+id/goalDetailDuration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/o_tw_duration"
                    android:layout_marginStart="184dp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="24dp">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_timeline_24px"
                    android:contentDescription="@string/o_iw_score_desc"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Progress:"
                    android:layout_marginStart="34dp"/>

                <TextView
                    android:id="@+id/goalDetailScore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/o_tw_score"
                    android:layout_marginStart="184dp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="24dp">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_today_24px"
                    android:contentDescription="@string/o_iw_score_desc"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="From:"
                    android:layout_marginStart="34dp"/>

                <TextView
                    android:id="@+id/goalDetailFrom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Dec 10, 2018"
                    android:layout_marginStart="184dp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="24dp">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_today_24px"
                    android:contentDescription="@string/o_iw_score_desc"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="To:"
                    android:layout_marginStart="34dp"/>

                <TextView
                    android:id="@+id/goalDetailTo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Dec 16, 2018"
                    android:layout_marginStart="184dp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="24dp">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_access_time_24px"
                    android:contentDescription="@string/o_iw_score_desc"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Time:"
                    android:layout_marginStart="34dp"/>

                <TextView
                    android:id="@+id/goalDetailTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="12:25 PM"
                    android:layout_marginStart="184dp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="24dp">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_notification_important_24px"
                    android:contentDescription="@string/o_iw_score_desc"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Notification"
                    android:layout_marginStart="34dp"/>

                <TextView
                    android:id="@+id/goalDetailNotification"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="10 minutes"
                    android:layout_marginStart="184dp" />
            </RelativeLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>